--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -16,17 +16,13 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <script src="assets/client.js" defer></script>
-    <script src="assets/filepicker.js" defer></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/display/placeholder.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
 
-    <script src="assets/welcome.js" defer></script>
+    <script src="assets/welcome.js" type="module"></script>
     <link rel="stylesheet" href="assets/welcome.css">
 
 </head>
