--- a/assets/sample.html
+++ b/assets/sample.html
@@ -11,9 +11,9 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
     <link rel="stylesheet" href="assets/welcome.css">
@@ -22,7 +22,7 @@
 
 <body>
     <div id="title">
-        <h1>welcome to <img src="assets/logo.svg"></h1>
+        <h1>welcome to <img src="assets/img/logo.svg"></h1>
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
