--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -11,29 +11,28 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
+    
+    <script src="assets/common/RegisterSW.js"></script>
 
-    <script src="assets/client.js" defer></script>
-    <script src="assets/filepicker.js" defer></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/display/placeholder.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
 
-    <script src="assets/welcome.js" defer></script>
-    <link rel="stylesheet" href="assets/welcome.css">
 
+    <link rel="stylesheet" href="assets/welcome.css">
+    
+    <script src="assets/welcome.js" type="module" defer></script>
 </head>
 
 <body class="loading nosessions">
     <div id="title">
-        <h1>welcome to <img src="assets/logo.svg"></h1>
+        <h1>welcome to <img src="assets/img/logo.svg"></h1>
         <main>
             <p>New session:</p>
             <ul id="new">
