--- a/assets/error.jl.html
+++ b/assets/error.jl.html
@@ -3,31 +3,33 @@
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>⚡ Pluto.jl ⚡</title>
+    <title>⚡ Error! ⚡</title>
     <meta charset="utf-8" />
     <script>
         console.log("Pluto.jl, by Fons van der Plas (https://github.com/fonsp) and Mikołaj Bochenski (https://github.com/malyvsen) 🌈");
-        </script>
+    </script>
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <link rel="stylesheet" href="assets/welcome.css">
+    <link rel="stylesheet" href="welcome.css">
 
 </head>
 
 <body>
     <div id="title">
-        <h1>welcome to <img src="assets/img/logo.svg"><span class="phantom"> ot emoclew</span></h1>
-            <main>
+        <img id="error-img" src="img/cute.svg">
+        <h1> oh no! error occurred when opening that file <span id="emoji">😥</span></h1>
+        <h3>{{Error Message}}</h3>
+        <main>
             <p class="new">Samples:</p>
             <ul class="new">
-                <li>1. <a href="sample/basic.jl">Welcome</a></li>
-                <li>2. <a href="sample/ui.jl">Interactivity</a></li>
+                <li>1. <a href="/sample/basic.jl">Welcome</a></li>
+                <li>2. <a href="/sample/ui.jl">Interactivity</a></li>
                 <li>&#160&#160&#160<i>More to come...</i></li>
             </ul>
         </main>
