--- a/assets/editor.html
+++ b/assets/editor.html
@@ -68,10 +68,7 @@
             <a href="./">
                 <h1><img id="logo-big" src="assets/img/logo.svg" alt="Pluto.jl" /><img id="logo-small" src="assets/img/favicon_unsaturated.svg" alt="" /></h1>
             </a>
-            <filepicker>
-
-                <button>Rename</button>
-            </filepicker>
+            <span id="filepickerhereplease"></span>
         </div>
     </header>
 
