--- a/assets/editor.html
+++ b/assets/editor.html
@@ -65,6 +65,6 @@
 <body class="loading no-MαθJax">
 </body>
 
-<script src="assets/editorCOOL.js" type="module"></script>
+<script src="assets/editor.js" type="module"></script>
 
 </html>
