--- a/assets/editor.html
+++ b/assets/editor.html
@@ -60,11 +60,12 @@
     <!-- <script src="assets/editor.js" type="module" defer></script> -->
     <!-- <script src="assets/feedback.js" type="module" defer></script> -->
     <!-- <script src="assets/treeview.js" defer></script> -->
+    <script src="assets/editor.js" type="module" defer></script>
+    <script src="assets/warn_old_browsers.js"></script>
 </head>
 
 <body class="loading no-MαθJax">
 </body>
 
-<script src="assets/editor.js" type="module"></script>
 
 </html>
