--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="assets/welcome.css">
     
     <script src="assets/welcome.js" type="module" defer></script>
+    <script src="assets/warn_old_browsers.js"></script>
 </head>
 
 <body class="loading nosessions">
@@ -38,16 +39,10 @@
             <ul id="new">
                 <li>Open a <a href="sample">sample notebook</a></li>
                 <li>Create a <a href="new">new notebook</a></li>
-                <li>Open from file:
-                    <filepicker>
-                        <button>Open</button>
-                    </filepicker>
+                <li>
+                    Open from file:
+                    <p><em>Loading...</em></p>
                 </li>
-            </ul>
-            <br/>
-            <p>Recent sessions:</p>
-            <ul id="recent">
-                <li><em>Loading...</em></li>
             </ul>
         </main>
     </div>
