--- a/assets/editor.html
+++ b/assets/editor.html
@@ -19,7 +19,7 @@
     <script src="assets/common/RegisterSW.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/core.min.js" defer></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/mode/julia/julia.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js" defer></script>
