--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -18,6 +18,7 @@
     
     <script src="assets/common/RegisterSW.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/display/placeholder.min.js" defer></script>
