--- a/assets/sample.html
+++ b/assets/sample.html
@@ -26,7 +26,7 @@
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
-                <li>1. <a href="sample/basic.jl">Welcome</a></li>
+                <li>1. <a href="sample/intro.jl">Getting started</a></li>
                 <li>2. <a href="sample/ui.jl">Interactivity</a></li>
                 <li>3. <a href="sample/plots.jl">Plots</a></li>
                 <li>4. <a href="sample/tower-of-hanoi.jl">Tower of Hanoi</a></li>
