--- a/assets/error.jl.html
+++ b/assets/error.jl.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <script>
         console.log("Pluto.jl, by Fons van der Plas (https://github.com/fonsp) and Mikołaj Bochenski (https://github.com/malyvsen) 🌈");
-        </script>
+    </script>
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
@@ -17,19 +17,18 @@
     <meta name="description" content="Pluto.jl notebooks" />
 
     <link rel="stylesheet" href="assets/welcome.css">
-
 </head>
 
-<body>
+<body class="error">
     <div id="title">
-        <h1>welcome to <img src="assets/img/logo.svg"><span class="phantom"> ot emoclew</span></h1>
-            <main>
-            <p class="new">Samples:</p>
-            <ul class="new">
-                <li>1. <a href="sample/basic.jl">Welcome</a></li>
-                <li>2. <a href="sample/ui.jl">Interactivity</a></li>
-                <li>&#160&#160&#160<i>More to come...</i></li>
-            </ul>
+        <h2 style="font-style: normal;">$TITLE</h2>
+        <main>
+            <p>$ADVICE</p>
+            <br />
+            <p><a href="./">Go back</a></p>
+            <br />
+            <p>$BODYTITLE</p>
+            <pre>$BODY</pre>
         </main>
     </div>
 </body>
