🎹 Hot reload & browser debugging for Pluto devs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,12 +11,12 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
-    
-    <script src="assets/common/RegisterSW.js"></script>
+
+    <script src="common/RegisterSW.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
@@ -26,15 +26,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
 
 
-    <link rel="stylesheet" href="assets/welcome.css">
-    
-    <script src="assets/welcome.js" type="module" defer></script>
-    <script src="assets/warn_old_browsers.js"></script>
+    <link rel="stylesheet" href="index.css">
+
+    <script src="index.js" type="module" defer></script>
+    <script src="warn_old_browsers.js"></script>
 </head>
 
 <body class="loading nosessions">
     <div id="title">
-        <h1>welcome to <img src="assets/img/logo.svg"></h1>
+        <h1>welcome to <img src="img/logo.svg"></h1>
         <main>
             <p>New session:</p>
             <ul id="new">
