--- a/frontend/statistics-info.html
+++ b/frontend/statistics-info.html
@@ -11,13 +11,13 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <link rel="stylesheet" href="assets/welcome.css">
-    <script src="assets/statistics-info.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <script src="statistics-info.js" defer></script>
 </head>
 
 <body class="statistics">
@@ -27,7 +27,7 @@
             <p>The Pluto project is an ambition to <em><a href="http://worrydream.com/#!/LearnableProgramming">rethink what a programming environment should be</a></em>. We believe that scientific programming can be a lot simpler. Not by adding more buttons to a text editor — by giving space to creative thought, and automating the rest.</p>
             <p><strong>You can help!</strong> Pluto collects statistics on <em>how you use the editor</em>. This information is helpful in understanding what is needed in a programming environment, and which features to work on next.</p>
             <br>
-            <p>If you agree, these statistics will be sent to Pluto's developers. The data points <strong>do not</strong> include personal details, notebook code, file names or stack traces. <a href="assets/common/Feedback.js">View source code.</a></p>
+            <p>If you agree, these statistics will be sent to Pluto's developers. The data points <strong>do not</strong> include personal details, notebook code, file names or stack traces. <a href="common/Feedback.js">View source code.</a></p>
             <p><em>Here's the entire statistics message of your editor:</em></p>
             <code><pre>
                 loading...
