--- a/frontend/error.jl.html
+++ b/frontend/error.jl.html
@@ -16,7 +16,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../index.css">
 </head>
 
 <body class="error">
