--- a/frontend/sample.html
+++ b/frontend/sample.html
@@ -26,10 +26,10 @@
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
-                <li>1. <a href="sample/intro.jl">Getting started</a></li>
-                <li>2. <a href="sample/ui.jl">Interactivity</a></li>
-                <li>3. <a href="sample/plots.jl">Plots</a></li>
-                <li>4. <a href="sample/tower-of-hanoi.jl">Tower of Hanoi</a></li>
+                <li>1. <a href="sample/Getting%20started.jl">Getting started</a></li>
+                <li>2. <a href="sample/Interactivity.jl">Interactivity</a></li>
+                <li>3. <a href="sample/Plots.jl">Plots</a></li>
+                <li>4. <a href="sample/Tower%20of%20Hanoi.jl">Tower of Hanoi</a></li>
                 <li>&#160&#160&#160<i>More to come...</i></li>
             </ul>
         </main>
