--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -37,7 +37,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js" defer></script>
 
     <!-- MathJax config must be set before loading -->
-    <script>
+    <!-- <script>
         MathJax = {
             options: {
                 ignoreHtmlClass: "no-MαθJax",
@@ -54,8 +54,8 @@
             },
         };
     </script>
-    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" async></script>
-
+    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" async></script> -->
+    <!-- <script src="https://cdn.plot.ly/plotly-1.54.2.min.js"></script> -->
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 </head>
