--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -35,11 +35,11 @@
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js" defer></script>
 
-    <script src="common/SetupMathJax.js" async></script>
-    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" async></script>
-
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
+
+    <script src="common/SetupMathJax.js"></script>
+    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" async></script>
 </head>
 
 <body class="loading no-MαθJax">
