--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -24,6 +24,8 @@
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/hint/show-hint.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/display/placeholder.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/edit/matchbrackets.min.js" defer></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/search/searchcursor.min.js" defer></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/comment/comment.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.56.0/addon/hint/show-hint.min.css">
 
