--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/hint/show-hint.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/display/placeholder.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/edit/matchbrackets.min.js" defer></script>
-    <script src="https://codemirror.net/addon/runmode/runmode.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/runmode/runmode.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.2.11/js/iframeResizer.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/search/searchcursor.min.js" defer></script> -->
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.57.0/addon/comment/comment.min.js" defer></script>
