jsdelivr for everything

--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="treeview.css" type="text/css" />
     <link rel="stylesheet" href="hide-ui.css" type="text/css" media="print" />
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback and statistics. We DO NOT use Google Analytics, and NO DATA is sent except for data entered in the feedback form and anonymous statistics. See /statistics-info for more details. -->
-    <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js" defer></script>
-    <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
