--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,6 +40,8 @@
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
+    <script src="https://unpkg.com/github-api/dist/GitHub.bundle.min.js"></script>
+
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 
