--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,11 +40,28 @@
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
+
+    <!-- <script type="text/x-thebe-config">
+        {
+          requestKernel: true,
+          binderOptions: {
+            repo: "fonsp/pluto-on-binder",
+            ref: "static-to-live-1",
+            binderUrl: "https://mybinder.org",
+            repoProvider: "github",
+          },
+        }
+      </script>
+    <script src="https://unpkg.com/thebe@0.6.0/lib/index.js"></script> -->
+
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 
     <script src="common/SetupMathJax.js"></script>
     <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3.1.2/es5/tex-svg-full.js" async></script>
+
+
+
 </head>
 
 <body class="loading no-MαθJax"></body>
