--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,8 @@
 
     <script src="common/RegisterSW.js"></script>
 
+    <script src="https://unpkg.com/github-api/dist/GitHub.bundle.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/lib/codemirror.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/hint/show-hint.min.js" defer></script>
