--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -11,12 +11,12 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png" />
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <script src="common/RegisterSW.js"></script>
+    <script src="./common/RegisterSW.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
@@ -33,34 +33,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/lib/codemirror.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/hint/show-hint.min.css" />
 
-    <link rel="stylesheet" href="editor.css" type="text/css" />
-    <link rel="stylesheet" href="treeview.css" type="text/css" />
-    <link rel="stylesheet" href="hide-ui.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="./editor.css" type="text/css" />
+    <link rel="stylesheet" href="./treeview.css" type="text/css" />
+    <link rel="stylesheet" href="./hide-ui.css" type="text/css" media="print" />
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback and statistics. We DO NOT use Google Analytics, and NO DATA is sent except for data entered in the feedback form and anonymous statistics. See /statistics-info for more details. -->
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
+    <!-- [automatically generated launch parameters can be inserted here] -->
 
-    <!-- <script type="text/x-thebe-config">
-        {
-          requestKernel: true,
-          binderOptions: {
-            repo: "fonsp/pluto-on-binder",
-            ref: "static-to-live-1",
-            binderUrl: "https://mybinder.org",
-            repoProvider: "github",
-          },
-        }
-      </script>
-    <script src="https://unpkg.com/thebe@0.6.0/lib/index.js"></script> -->
+    <script src="./editor.js" type="module" defer></script>
+    <script src="./warn_old_browsers.js"></script>
 
-    <script src="editor.js" type="module" defer></script>
-    <script src="warn_old_browsers.js"></script>
-
-    <script src="common/SetupMathJax.js"></script>
+    <script src="./common/SetupMathJax.js"></script>
     <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3.1.2/es5/tex-svg-full.js" async></script>
-
-
 
 </head>
 
