--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -16,7 +16,10 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png" />
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <script src="./common/RegisterSW.js"></script>
+    <link rel="pluto-sw" href="./sw.js" />
+    <script>
+        navigator.serviceWorker?.register(document.head.querySelector("link[rel='pluto-sw']").getAttribute("href"), { scope: "./" }).catch(console.warn)
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
