--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -15,6 +15,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png" />
     <meta name="description" content="Pluto.jl notebooks" />
+    <link rel="pluto-logo-big" href="./img/logo.svg" />
+    <link rel="pluto-logo-small" href="./img/favicon_unsaturated.svg" />
 
     <link rel="pluto-sw" href="./sw.js" />
     <script>
