--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/hint/show-hint.min.css" />
 
     <link rel="stylesheet" href="./editor.css" type="text/css" />
+    <link rel="stylesheet" href="./binder-ui.css" type="text/css" />
     <link rel="stylesheet" href="./treeview.css" type="text/css" />
     <link rel="stylesheet" href="./hide-ui.css" type="text/css" media="all" data-pluto-file="hide-ui">
     <link rel="preload" href="./juliamono.css" as="style">
