--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,6 +40,10 @@
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
+    <script type="text/javascript" src="http://localhost:4507/repl.js"></script>
+    <!-- <script src="https://fonsp-julia-wasm-build.netlify.app/hello-no-bysyncify.js"></script> -->
+    <script src="https://keno.github.io/julia-wasm-build/hello-no-bysyncify.js"></script>
+
     <script src="editor.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 
