--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -44,7 +44,7 @@
     <!-- <script src="https://fonsp-julia-wasm-build.netlify.app/hello-no-bysyncify.js"></script> -->
     <script src="https://keno.github.io/julia-wasm-build/hello-no-bysyncify.js"></script>
 
-    <script src="editor.js" type="module" defer></script>
+    <script src="editor.bundle.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 
     <script src="common/SetupMathJax.js"></script>
