--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
 
-    <script src="editor.js" type="module" defer></script>
+    <script src="editor.bundle.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
 
     <script src="common/SetupMathJax.js"></script>
