--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -19,6 +19,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/@webio/webio@0.8.15/dist/webio.bundle.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.2.11/js/iframeResizer.min.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/lib/codemirror.min.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/mode/julia/julia.min.js" defer></script>
@@ -31,9 +32,6 @@
         <!-- <script src="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/search/searchcursor.min.js" defer></script> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/lib/codemirror.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/hint/show-hint.min.css" />
-
-        <!-- WebIO Shit -->
-        <script src="https://bundle.run/@webio/webio@0.8.15" defer></script>
 
         <link rel="stylesheet" href="editor.css" type="text/css" />
         <link rel="stylesheet" href="treeview.css" type="text/css" />
