--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,8 +40,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.58.1/addon/hint/show-hint.min.css" />
 
     <link rel="stylesheet" href="./editor.css" type="text/css" />
-    <link rel="stylesheet" href="./treeview.css" type="text/css" />
     <link rel="stylesheet" href="./hide-ui.css" type="text/css" media="all" data-pluto-file="hide-ui">
+    <link rel="stylesheet" href="./binder.css" type="text/css" />
+    <link rel="stylesheet" href="./treeview.css" type="text/css" />
+    <link rel="preload" href="./juliamono.css" as="style">
+    <link rel="preload" href="./vollkorn.css" as="style">
+
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback. -->
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-firestore.js" defer></script>
