--- a/frontend/sample.html
+++ b/frontend/sample.html
@@ -26,12 +26,12 @@
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
-                <li>1. <a href="sample/Getting%20started.jl">Getting started</a></li>
-                <li>2. <a href="sample/Basic%20mathematics.jl">Basic mathematics</a></li>
-                <li>3. <a href="sample/Interactivity.jl">Interactivity</a></li>
-                <li>4. <a href="sample/PlutoUI.jl.jl">PlutoUI.jl</a></li>
-                <li>5. <a href="sample/Plots.jl.jl">Plots.jl</a></li>
-                <li>6. <a href="sample/Tower%20of%20Hanoi.jl">Tower of Hanoi</a></li>
+                <li>1. <a href="sample/Getting%20started.pluto.jl">Getting started</a></li>
+                <li>2. <a href="sample/Basic%20mathematics.pluto.jl">Basic mathematics</a></li>
+                <li>3. <a href="sample/Interactivity.pluto.jl">Interactivity</a></li>
+                <li>4. <a href="sample/PlutoUI.jl.pluto.jl">PlutoUI.jl</a></li>
+                <li>5. <a href="sample/Plots.jl.pluto.jl">Plots.jl</a></li>
+                <li>6. <a href="sample/Tower%20of%20Hanoi.pluto.jl">Tower of Hanoi</a></li>
                 <li>&#160&#160&#160<i>More to come...</i></li>
             </ul>
         </main>
