Initialize Dark mode codebase

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,7 @@
 
 
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./dark-mode.css" type="text/css" />
 
     <script src="index.js" type="module" defer></script>
     <script src="warn_old_browsers.js"></script>
