--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.min.css" />
 
     <link rel="stylesheet" href="./editor.css" type="text/css" />
+    <link rel="stylesheet" href="./dark-mode.css" type="text/css" />
     <link rel="stylesheet" href="./hide-ui.css" type="text/css" media="all" data-pluto-file="hide-ui">
     <link rel="stylesheet" href="./binder.css" type="text/css" />
     <link rel="stylesheet" href="./treeview.css" type="text/css" />
