--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./treeview.css" type="text/css" />
     <link rel="preload" href="./juliamono.css" as="style" />
     <link rel="preload" href="./vollkorn.css" as="style" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/styles/atom-one-light.min.css" />
+    <link rel="stylesheet" href="./highlightjs.css" type="text/css">
 
     <!-- [automatically generated launch parameters can be inserted here] -->
 
