Improve error message for #1979

--- a/frontend/error.jl.html
+++ b/frontend/error.jl.html
@@ -28,7 +28,7 @@
         <main>
             <p>$ADVICE</p>
             <br />
-            <p><a href="./">Go back</a></p>
+            <p><a href="#" onclick="history.back()">Go back</a></p>
             <br />
             <p>$BODYTITLE</p>
             <pre>$BODY</pre>
