Include mathjax in bundle

--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -40,7 +40,7 @@
     <script src="./warn_old_browsers.js"></script>
 
     <!-- This script will be enabled by JS after the notebook has initialized to prevent taking up bandwidth during the initial load. -->
-    <script type="text/javascript" id="MathJax-script" not-the-src-yet="https://cdn.jsdelivr.net/npm/mathjax@3.1.2/es5/tex-svg-full.js" async></script>
+    <link rel="x-src-ref" id="MathJax-script-src" href="https://cdn.jsdelivr.net/npm/mathjax@3.1.2/es5/tex-svg-full.js">
 </head>
 
 <body class="loading no-MαθJax">
